--- a/style.css
+++ b/style.css
@@ -9,13 +9,23 @@ body {
     margin: 0;
 }
 
+
 .container {
     text-align: center;
     background: linear-gradient(135deg, #3498db, #6a89cc);
     padding: 30px;
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    color: #fff; /* Set text color to white for better contrast */
+    color: #fff;
+}
+
+img {
+    display: block;
+    
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+    border-radius: 50%;
 }
 
 button {
@@ -45,10 +55,9 @@ input {
     border-radius: 8px;
     outline: none;
     transition: border-color 0.3s ease;
-    color: #333; /* Set text color to a dark color for better visibility */
-    background-color: #fff; /* Set background color to white */
+    color: #333; 
+    background-color: #fff; 
 }
-
 /* Remove arrows on number input */
 input::-webkit-inner-spin-button,
 input::-webkit-outer-spin-button {
