--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    overflow: hidden;
     text-align: center;
     color: white;
 }
@@ -24,19 +23,27 @@ body {
 }
 
 .nav-bar h2 {
+    font-size: 2.5rem;
     width: 90%;
 }
 
 .nav-bar button:hover {
     cursor: pointer;
+    /* background-color: #3498db; */
     border: 2px solid white;
 }
+
+#name:hover {
+    background-color: #3498db;
+    /* font-size: 2.5rem; */
+}
+
 main {
     background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 84vh;
     margin: 0;
 }
 .main-box {
@@ -182,6 +189,14 @@ select {
 #minRange, #maxRange {
     font-weight: bold;
     color: #333;
+}
+
+footer {
+    height: 50px;
+    background: linear-gradient(135deg, #3498db, #6a89cc);
+    text-align: center;
+    color: white;
+    font-size: 30px;
 }
 
 @media only screen and (max-width: 600px) {
